--- a/assets/snippets/star_rating/package.json
+++ b/assets/snippets/star_rating/package.json
@@ -1,7 +1,7 @@
 {
   "name": "StarRating",
-  "version": "1.0.6",
-  "description": "",
+  "version": "1.0.8",
+  "description": "Star Rating for MODX Evolution",
   "main": "gulpfile.js",
   "keywords": [
     "Rating",
